updated invest website

--- a/invest/index.html
+++ b/invest/index.html
@@ -89,7 +89,7 @@
         Information empowers good decisions.
       </h1>
       <p class="leading-normal mb-4 ">
-        An ambitious project aiming to make story discovery as easy as possible. When you are starting your article,
+        Doing research for your new story was never this easy. When you are starting your article,
         data trends are essential. With the trendy dots platform you will get insights into new stories and new trends
         <br> <br>
         We offer an intuitive, easy to use way for getting informed about the
@@ -102,16 +102,15 @@
     class="my-8 pt-8 font-sans container max-w-xl m-auto flex flex-col-reverse lg:flex-row text-center lg:text-left sm:items-center">
     <div class="w-full lg:w-1/2 flex flex-col justify-center items-start p-8 items-center lg:items-start">
       <h1 class="my-4 font-normal text-grey-darker">
-        Standard reporting containing insights into company shares, indices, commodities,
-        cryptocurrencies and world events.
+        Internet behaviur research into world events, companies, markets and many more.
       </h1>
       <br />
       <p class="leading-normal mb-4">
-        We offer up-to-date information which helps you decide about
-        transactions on a broad spectrum of opportunities. Fast and reliable,
-        the trendy dots investor news compiles headlines from the most read
-        media outlets in the world and categorizes them according to your
-        setting. You will get daily digests over news coverage, global impact
+        We offer up-to-date information which helps you with a broad spectrum of writing opportunities.
+        Fast and reliable,
+        the trendy dots headline plugin compiles headlines from the most read
+        media outlets in the world and categorizes them according to sentiment.
+        You will get digests over global impact
         and interest in the events, companies, currencies, etc. you set.
       </p>
     </div>
