--- a/invest/project.html
+++ b/invest/project.html
@@ -89,7 +89,7 @@
         Information empowers good decisions.
       </h1>
       <p class="leading-normal mb-4 ">
-        An ambitious project aiming to make story discovery as easy as possible. When you are starting your article,
+        Doing research for your new story was never this easy. When you are starting your article,
         data trends are essential. With the trendy dots platform you will get insights into new stories and new trends
         <br> <br>
         We offer an intuitive, easy to use way for getting informed about the
@@ -102,16 +102,15 @@
     class="my-8 pt-8 font-sans container max-w-xl m-auto flex flex-col-reverse lg:flex-row text-center lg:text-left sm:items-center">
     <div class="w-full lg:w-1/2 flex flex-col justify-center items-start p-8 items-center lg:items-start">
       <h1 class="my-4 font-normal text-grey-darker">
-        Standard reporting containing insights into company shares, indices, commodities,
-        cryptocurrencies and world events.
+        Internet behaviur research into world events, companies, markets and many more.
       </h1>
       <br />
       <p class="leading-normal mb-4">
-        We offer up-to-date information which helps you decide about
-        transactions on a broad spectrum of opportunities. Fast and reliable,
-        the trendy dots investor news compiles headlines from the most read
-        media outlets in the world and categorizes them according to your
-        setting. You will get daily digests over news coverage, global impact
+        We offer up-to-date information which helps you with a broad spectrum of writing opportunities.
+        Fast and reliable,
+        the trendy dots headline plugin compiles headlines from the most read
+        media outlets in the world and categorizes them according to sentiment.
+        You will get digests over global impact
         and interest in the events, companies, currencies, etc. you set.
       </p>
     </div>
@@ -148,7 +147,57 @@
     </div>
   </section>
 
+  <section class="bg-white py-4 font-sans">
+    <h3 class="font-medium text-grey-darkest mb-4 text-center text-2xl py-4"> Written using td. trend research </h3>
 
+    <div class="container max-w-xl m-auto flex flex-wrap items-center justify-start">
+
+      <div class="w-full md:w-1/2 lg:w-1/3 flex flex-col mb-8 px-3">
+        <div
+          class="border overflow-hidden bg-white rounded-lg shadow hover:shadow-raised hover:translateY-2px transition">
+          <img class="w-full" style="padding: 25px 0;" src="./assets/img/candf.png" alt="Sunset in the mountains">
+          <div class="p-6 flex flex-col justify-between ">
+            <h3 class="font-medium text-grey-darkest mb-4 leading-normal">
+              Cleantech & Fintech</h3>
+            <p class="inline-flex items-center">
+              <a href="https://medium.com/@research.trendydots/cleantech-fintech-275ffb2c0a44" target="_blank"
+                class="text-grey-dark text-sm no-underline">Read on Medium</a>
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="w-full md:w-1/2 lg:w-1/3 flex flex-col mb-8 px-3">
+        <div
+          class="border overflow-hidden bg-white rounded-lg shadow hover:shadow-raised hover:translateY-2px transition">
+          <img class="w-full" src="./assets/img/shandha.png" alt="Sunset in the mountains">
+          <div class="p-6 flex flex-col justify-between ">
+            <h3 class="font-medium text-grey-darkest mb-4 leading-normal">
+              Smart Home vs. Home Automation</h3>
+            <p class="inline-flex items-center">
+              <a href="https://medium.com/@research.trendydots/smart-home-vs-home-automation-403df3b2f7ae"
+                target="_blank" class="text-grey-dark text-sm no-underline">Read on Medium</a>
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="w-full md:w-1/2 lg:w-1/3 flex flex-col mb-8 px-3">
+        <div
+          class="border overflow-hidden bg-white rounded-lg shadow hover:shadow-raised hover:translateY-2px transition">
+          <img style="padding: 36px 0;" class="w-full" src="./assets/img/aiandet.png" alt="Sunset in the mountains">
+          <div class="p-6 flex flex-col justify-between ">
+            <h3 class="font-medium text-grey-darkest mb-4 leading-normal">AI and Ethics</h3>
+            <p class="inline-flex items-center">
+              <a href="https://medium.com/@research.trendydots/ai-and-ethics-eace9f56710e" target="_blank"
+                class="text-grey-dark text-sm no-underline">Read on Medium</a>
+            </p>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </section>
   <section style="margin-top:5em"
     class="my-8 font-sans container max-w-xl m-auto flex flex-col lg:flex-row text-center lg:text-left sm:items-center">
     <div class="w-full lg:w-1/2" style="box-shadow: 0 1.5em 85px 0 rgba(0,0,0,.2);">
@@ -223,7 +272,7 @@
       ©2019 trendydots.com All rights reserved. &nbsp;
       <a href="../privacy-statement.html" target="_blank" style="color:#000">Privacy statement</a>
       &nbsp;
-      <a href="../terms-of-service.html" target="_blank" style="color:#000">Terms of service</a>
+      <a href="../terms-of-service.html" target="_blank" style="color:#000"> Terms of service</a>
       &nbsp;
       <a href="../imprint.html" target="_blank" class="inline-block py-2 px-3 text-black">Impressum</a>
     </div>
