--- a/invest/project.html
+++ b/invest/project.html
@@ -157,11 +157,12 @@
           class="border overflow-hidden bg-white rounded-lg shadow hover:shadow-raised hover:translateY-2px transition">
           <img class="w-full" style="padding: 25px 0;" src="./assets/img/candf.png" alt="Sunset in the mountains">
           <div class="p-6 flex flex-col justify-between ">
-            <h3 class="font-medium text-grey-darkest mb-4 leading-normal">
+            <h3 class="font-medium text-grey-darkest mb-4 leading-normal text-center">
               Cleantech & Fintech</h3>
-            <p class="inline-flex items-center">
+            <p class="text-center">
               <a href="https://medium.com/@research.trendydots/cleantech-fintech-275ffb2c0a44" target="_blank"
-                class="text-grey-dark text-sm no-underline">Read on Medium</a>
+                class="bg-green-dark text-white font-bold py-2 px-4 rounded-full text-sm no-underline">Read
+                on Medium</a>
             </p>
           </div>
         </div>
@@ -172,11 +173,13 @@
           class="border overflow-hidden bg-white rounded-lg shadow hover:shadow-raised hover:translateY-2px transition">
           <img class="w-full" src="./assets/img/shandha.png" alt="Sunset in the mountains">
           <div class="p-6 flex flex-col justify-between ">
-            <h3 class="font-medium text-grey-darkest mb-4 leading-normal">
+            <h3 class="font-medium text-grey-darkest mb-4 leading-normal text-center">
               Smart Home vs. Home Automation</h3>
-            <p class="inline-flex items-center">
+            <p class="text-center">
               <a href="https://medium.com/@research.trendydots/smart-home-vs-home-automation-403df3b2f7ae"
-                target="_blank" class="text-grey-dark text-sm no-underline">Read on Medium</a>
+                target="_blank"
+                class="bg-green-dark text-white font-bold py-2 px-4 rounded-full text-sm no-underline">Read on
+                Medium</a>
             </p>
           </div>
         </div>
@@ -187,10 +190,11 @@
           class="border overflow-hidden bg-white rounded-lg shadow hover:shadow-raised hover:translateY-2px transition">
           <img style="padding: 36px 0;" class="w-full" src="./assets/img/aiandet.png" alt="Sunset in the mountains">
           <div class="p-6 flex flex-col justify-between ">
-            <h3 class="font-medium text-grey-darkest mb-4 leading-normal">AI and Ethics</h3>
-            <p class="inline-flex items-center">
+            <h3 class="font-medium text-grey-darkest mb-4 leading-normal text-center">AI and Ethics</h3>
+            <p class="text-center">
               <a href="https://medium.com/@research.trendydots/ai-and-ethics-eace9f56710e" target="_blank"
-                class="text-grey-dark text-sm no-underline">Read on Medium</a>
+                class="bg-green-dark text-white font-bold py-2 px-4 rounded-full text-sm no-underline">Read on
+                Medium</a>
             </p>
           </div>
         </div>
