--- a/invest/getting-started.html
+++ b/invest/getting-started.html
@@ -6,12 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta property="og:image" content="https://trendydots.com/invest/assets/img/in3.png" />
-  <link rel="stylesheet" type="text/css" href="./assets/css/stitches.css">
+  <!-- <link rel="stylesheet" type="text/css" href="./assets/css/stitches.css"> -->
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@0.7.4/dist/tailwind.min.css?v=3nov" rel="stylesheet">
   <link href=https://fonts.googleapis.com/css?family=Muli:300,400,600,700,800,900 rel="stylesheet">
   <link rel="stylesheet" href=https://use.fontawesome.com/releases/v5.6.3/css/all.css
     integrity=sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/ crossorigin="anonymous">
 
-  <title>trendy dots - market research</title>
+  <title>trendy dots - trend research</title>
   <link rel="shortcut icon" type="image/png" href="./assets/img/logo.png" />
   <style>
     *:focus {
@@ -45,36 +46,50 @@
 
 <body class="htmlNoPages eupopup eupopup-bottom eupopup-style-compact" style="background: #f5f5f5">
 
-  <nav class="font-sans bg-white text-center flex justify-between p-4 container overflow-hidden"
-    style="box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24); max-width: 100%; position: fixed; top: 0; z-index: 100; ">
+  <nav
+    class="font-sans bg-white text-center flex md:justify-between items-center md:flex-row flex-col px-4 py-2 container overflow-hidden"
+    style="
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    max-width: 100%; position: fixed; top: 0; z-index: 100; 
+">
     <span class="flex items-center">
       <a href="https://trendydots.com" class="block text-left" target="_blank">
-        <img src="assets/img/logo.png" class="h-8 sm:h-8 rounded-full" alt="logo">
+        <img src="assets/img/logo.png" class="h-8 sm:h-8 rounded-full" alt="logo" />
       </a>
       &nbsp;
-      <b class="text-lg flex text-left" style="font-size: 1.35rem;">market
-        <span style="color: #f9cb0f; display: inline; text-indent: 0.2em">research </span>
+      <b class="text-lg flex text-left" style="font-size: 1.35rem;">
+        <span style="color: #606f7b; display: inline; text-indent: 0.2em">trend research
+        </span>
       </b>
     </span>
-    <ul class="text-sm text-grey-dark list-reset flex items-center">
-      <!--  DO NOT DELETE
+
+
+    <ul class="md:text-sm text-xs text-grey-dark list-reset flex items-center flex-row">
       <li>
-        <a target="_self" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline" style="color:grey">EN</a>
+        <a class="btn bg-white border border-red cursor-pointer no-underline text-grey-darkest font-bold py-2 px-4 mx-4 mb-2 rounded-full shadow inline-flex items-center"
+          href="https://www.patreon.com/bePatron?u=14590376" target="_blank">
+          <img src="../patreon-logo1.png" style="height: 1.5em; vertical-align: middle;" alt="">
+          &nbsp;
+          <span> Become a patron</span>
+        </a>
       </li>
+
       <li>
-        <a href="./pt/" target="_self" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">PT</a>
+        <a href="https://www.paypal.me/trendydots" target="_blank"
+          class="btn bg-white border border-blue cursor-pointer no-underline text-grey-darkest font-bold py-2 px-4 mb-2 rounded-full shadow inline-flex items-center">
+          <img src="../paypal-logo.png" style="height: 1.5em; vertical-align: middle;" alt="">
+          &nbsp;&nbsp;
+          <span> Donate one time</span>
+        </a>
       </li>
-      
-      <a href="#subscribe-section" class="bg-black hover:bg-grey-darker text-white ml-4 py-2 px-3 no-underline">
-        Sign Up
-      </a>
-      -->
+
     </ul>
+
   </nav>
 
   <section class="my-8 font-sans container max-w-xl m-auto flex flex-row sm:items-center" style="margin-top: 80px">
     <div class="w-full items-center">
-      <h1 class="mt-4 mb-6 font-medium" style="text-align:center">Getting started with the trendy dots - market <span style="color: #f9cb0f;">research</span>
+      <h1 class="mt-4 mb-6 font-medium" style="text-align:center">Getting started with the trendy dots - trend research
         platform β</h1>
     </div>
   </section>
@@ -126,20 +141,26 @@
   <footer class="font-sans bg-white py-8 px-4">
     <div
       class="mx-auto container overflow-hidden flex flex-col md:flex-row justify-between pb-4 text-center md:text-left">
-      <a href="" class="block mr-4 w-full md:w-1/4" target="_blank">
-        <img src="./assets/img/logo.png" class="w-24 -ml-8 md:ml-0" alt="logo">
+      <a href="/" class="block mr-4 w-full md:w-1/4" target="_blank">
+        <img src="./assets/img/logo.png" class="w-24 -ml-8 md:ml-0" alt="logo" />
       </a>
       <div class="w-full text-grey-darkest mt-6 md:mt-0 leading-normal">
-        <h4 class="py-2 uppercase font-bold tracking-wide">About US</h4>
-        <p>Trendy Dots is a boutique digital lab. making trend and exploratory data analysis on the new and old
-          markets. We
-          model the internet behaviour and forecast the evolution of markets, products, companies, etc. using
-          innovative
-          AI algorithms. </p>
+        <h4 class="py-2 uppercase font-bold tracking-wide">About</h4>
+        <p>
+          Trendy Dots is a hobby project developing fun applications for data science, data visualization and user
+          experience. I playfully apply UX and data science best practices to big data, aiming to produce high value
+          tools.
+        </p>
       </div>
       <div class="text-grey-dark flex flex-col items-center w-full md:w-1/4 mt-6 md:mt-0">
-        <h4 class="inline-block py-2 px-3 uppercase font-bold tracking-wide text-grey-darkest">Follow Us</h4>
+        <h4 class="inline-block py-2 px-3 uppercase font-bold tracking-wide text-grey-darkest">
+          Follow
+        </h4>
         <div class="flex pl-0 md:pl-4 justify-start">
+          <!-- 
+          <a class="block flex items-center text-grey-darkest hover:text-black mr-6 no-underline" href="#"><i class="fab fa-github-alt"></i></a>
+          <a class="block flex items-center text-grey-darkest hover:text-black mr-6 no-underline" href="#"><i class="fab fa-slack"></i></a>
+         -->
           <a class="block flex items-center text-grey-darkest hover:text-black no-underline" target="_blank"
             href="https://twitter.com/trendydots">
             <i class="fab fa-twitter"></i>
@@ -147,12 +168,16 @@
         </div>
       </div>
     </div>
-    <div class="pt-4 mt-4 text-grey-darker text-xs border-t border-grey-lighter text-center"> ©2019 trendydots.com All
-      rights reserved. &nbsp;
+    <div class="pt-4 mt-4 text-grey-darker text-xs border-t border-grey-lighter text-center">
+      ©2019 trendydots.com All rights reserved. &nbsp;
       <a href="../privacy-statement.html" target="_blank" style="color:#000">Privacy statement</a>
       &nbsp;
-      <a href="../terms-of-service.html" target="_blank" style="color:#000">Terms of service</a></div></div>
+      <a href="../terms-of-service.html" target="_blank" style="color:#000"> Terms of service</a>
+      &nbsp;
+      <a href="../imprint.html" target="_blank" class="inline-block py-2 px-3 text-black">Impressum</a>
+    </div>
   </footer>
+
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113784035-1"></script>
