--- a/invest/index.html
+++ b/invest/index.html
@@ -165,7 +165,7 @@
               </label>
               <input
                 class="appearance-none block w-full bg-grey-lighter text-grey-darker border border-grey-lighter rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white"
-                id="grid-user-name" type="text" name="user-name" placeholder="">
+                id="grid-user-name" type="text" name="user-name" placeholder="" required>
             </div>
             <div class="w-full md:w-1/2 px-3">
               <label class="block uppercase tracking-wide text-grey-darker text-xs font-bold mb-2"
@@ -186,7 +186,7 @@
               </label>
               <input
                 class="appearance-none block w-full bg-grey-lighter text-grey-darker border border-grey-lighter rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-grey"
-                id="grid-business-name" type="text" name="business-name" placeholder="">
+                id="grid-business-name" type="text" name="business-name" placeholder="" required>
             </div>
           </div>
           <div class="flex flex-wrap -mx-3 mb-6">
