--- a/invest/project.html
+++ b/invest/project.html
@@ -205,8 +205,9 @@
               <input type="hidden" name="only_fake_users"><input>
             </div>
             <div class="w-full md:w-1/3 px-3 mb-6 md:mb-0">
-              <button type="submit" class="submit btn btn-primary btn-shadow btn-gradient"
-                style=" font-weight: 800;color: #FBB82B;">Send Message</button>
+              <button type="submit"
+                class="submit btn btn-primary btn-shadow btn-gradient py-2 px-4 mx-4 mb-2 rounded-full shadow inline-flex items-center"
+                style=" font-weight: 800; color: #FBB82B; background: #f1f5f8;">Send Message</button>
             </div>
             <div class="w-full md:w-1/3 px-3 mb-6 md:mb-0">
 
