--- a/research/getting-started.html
+++ b/research/getting-started.html
@@ -74,7 +74,8 @@
 
   <section class="my-8 font-sans container max-w-xl m-auto flex flex-row sm:items-center" style="margin-top: 80px">
     <div class="w-full items-center">
-      <h1 class="mt-4 mb-6 font-medium" style="text-align:center">Getting started with the trendy dots - market <span style="color: #f9cb0f;">research</span>
+      <h1 class="mt-4 mb-6 font-medium" style="text-align:center">Getting started with the trendy dots - market <span
+          style="color: #f9cb0f;">research</span>
         platform β</h1>
     </div>
   </section>
@@ -147,11 +148,12 @@
         </div>
       </div>
     </div>
-    <div class="pt-4 mt-4 text-grey-darker text-xs border-t border-grey-lighter text-center"> ©2019 trendydots.com All
+    <div class="pt-4 mt-4 text-grey-darker text-xs border-t border-grey-lighter text-center"> ©2020 trendydots.com All
       rights reserved. &nbsp;
       <a href="../privacy-statement.html" target="_blank" style="color:#000">Privacy statement</a>
       &nbsp;
-      <a href="../terms-of-service.html" target="_blank" style="color:#000">Terms of service</a></div></div>
+      <a href="../terms-of-service.html" target="_blank" style="color:#000">Terms of service</a></div>
+    </div>
   </footer>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
