--- a/me/index.html
+++ b/me/index.html
@@ -61,7 +61,7 @@
               <br />
               <br />
               This is why I started &nbsp; &nbsp;
-              <a href="https://trendydots.com/project" class="block text-left" target="_blank"
+              <a href="https://trendydots.com" class="block text-left" target="_blank"
                 style="text-decoration: none; color: black; font-weight: 600; font-size: 26px; padding: 10px; border-radius:6px; box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24); cursor: pointer;">
                 <img src="../logo.png" style="height: 40px" alt="logo" />
                 trendy dots &nbsp;
@@ -147,8 +147,8 @@
                                 background-repeat: no-repeat;
                                 background-position: center;
                                 vertical-align: middle;
-                                display: inline-block;" alt="Thumbnail Image"
-                  class="rounded-circle img-fluid img-raised"></div>
+                                box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+                                display: inline-block;" alt="Thumbnail Image" class="rounded-circle img-fluid"></div>
                 <h4 class="title">Hewlett Packard Enterprise</h4>
                 <p class="category text-primary">Developer Intern</p>
                 <!--
@@ -176,10 +176,10 @@
                                 background-repeat: no-repeat;
                                 background-position: center;
                                 vertical-align: middle;
-                                display: inline-block;" alt="Thumbnail Image"
-                  class="rounded-circle img-fluid img-raised"></div>
+                                box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+                                display: inline-block;" alt="Thumbnail Image" class="rounded-circle img-fluid"></div>
                 <h4 class="title">Joint Research Centre</h4>
-                <p class="category text-primary">Researcher</p>
+                <p class="category text-primary">Researcher HCI</p>
               </div>
             </div>
             <div class="col-md-4">
@@ -191,10 +191,10 @@
                                 background-repeat: no-repeat;
                                 background-position: center;
                                 vertical-align: middle;
-                                display: inline-block;" alt="Thumbnail Image"
-                  class="rounded-circle img-fluid img-raised"></div>
+                                box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+                                display: inline-block;" alt="Thumbnail Image" class="rounded-circle img-fluid"></div>
                 <h4 class="title">Fondazione Bruno Kessler</h4>
-                <p class="category text-primary">Research Technician</p>
+                <p class="category text-primary">Research Technician HCI</p>
               </div>
             </div>
           </div>
@@ -210,10 +210,11 @@
                                     background-repeat: no-repeat;
                                     background-position: center;
                                     vertical-align: middle;
+                                    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
                                     display: inline-block;" alt="Thumbnail Image"
                   class="rounded-circle img-fluid img-raised"></div>
                 <h4 class="title">Seekda GmbH</h4>
-                <p class="category text-primary">Research Developer</p>
+                <p class="category text-primary">Research Developer UX/UI</p>
                 <!--
                                     <p class="description">You can write here details about one of your team members. You can give more details about
                                         what they do. Feel free to add some
@@ -240,8 +241,9 @@
                                     background-repeat: no-repeat;
                                     background-position: center;
                                     vertical-align: middle;
-                                    display: inline-block;" alt="Thumbnail Image"
-                  class="rounded-circle img-fluid img-raised"></div>
+                                    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+                                    display: inline-block;" alt="Thumbnail Image" class="rounded-circle img-fluid">
+                </div>
                 <h4 class="title">Roessingh Research and Development</h4>
                 <p class="category text-primary">Researcher HCI</p>
               </div>
@@ -256,8 +258,9 @@
                                         background-repeat: no-repeat;
                                         background-position: center;
                                         vertical-align: middle;
-                                        display: inline-block;" alt="Thumbnail Image"
-                  class="rounded-circle img-fluid img-raised"></div>
+                                        box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+                                        display: inline-block;" alt="Thumbnail Image" class="rounded-circle img-fluid">
+                </div>
                 <h4 class="title">Braintribe Ltd.</h4>
                 <p class="category text-primary">
                   Sr. Frontend Developer, R&D
@@ -277,12 +280,45 @@
                                         background-repeat: no-repeat;
                                         background-position: center;
                                         vertical-align: middle;
-                                        display: inline-block;" alt="Thumbnail Image"
-                  class="rounded-circle img-fluid img-raised"></div>
+                                        box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+                                        display: inline-block;" alt="Thumbnail Image" class="rounded-circle img-fluid">
+                </div>
                 <h4 class="title">Johnson & Johnson</h4>
                 <p class="category text-primary">
                   Sr. Frontend Developer Consultant
                 </p>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="team-player">
+                <div style="width: 100px;
+                                    height: 100px;
+                                    background: url(./assets/img/companies/cgmn.png);
+                                    background-size: 80%;
+                                    background-repeat: no-repeat;
+                                    background-position: center;
+                                    vertical-align: middle;
+                                    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+                                    display: inline-block;" alt="Thumbnail Image" class="rounded-circle img-fluid">
+                </div>
+                <h4 class="title">Capgemini</h4>
+                <p class="category text-primary">Lead Software Engineer</p>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="team-player">
+                <div style="width: 100px;
+                                    height: 100px;
+                                    background-image: url(./assets/img/companies/egit.png);
+                                    background-size: 80%;
+                                    background-repeat: no-repeat;
+                                    background-position: center;
+                                    vertical-align: middle;
+                                    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+                                    display: inline-block;" alt="Thumbnail Image" class="rounded-circle img-fluid ">
+                </div>
+                <h4 class="title">Erste Group IT</h4>
+                <p class="category text-primary">Consultant</p>
               </div>
             </div>
           </div>
