--- a/index.html
+++ b/index.html
@@ -92,12 +92,14 @@
         <h1 class="my-4 font-normal" style="font-weight: 700; margin-bottom: 2rem;
       font-size: 8vh; color: #757575">the story</h1>
         <p class="leading-normal mb-2 text-base md:text-lg xl:text-xl ">
-          Trendy Dots is a hobby project developing fun applications for data science, data visualization and user
-          experience.
+          Trendy Dots is an intiative developing fun applications for UX/UI, data science, data visualization and web
+          development.
           I playfully apply UX and data science best practices to big data, aiming to produce high value tools.
         </p>
         <p class="leading-normal mb-4 text-center ">
-          <img src="./cris.png" style="max-height: 150px; min-height: 100px;" alt="">
+          <a target="_blank" href="/me">
+            <img src="./cris.png" style="max-height: 150px; min-height: 100px;" alt="">
+          </a>
         </p>
       </div>
     </div>
@@ -322,7 +324,9 @@
 
   <footer class="font-sans bg-white pb-8 px-4" style="z-index: 4">
     <div class="mx-auto max-w-xl overflow-hidden flex flex-col md:flex-row justify-between items-center">
-      <p class="inline-block py-2 px-3 text-center md:text-left"> ©2020 <strong class="">trendydots.com</strong> <br>
+      <p class="inline-block py-2 px-3 text-center md:text-left"> ©
+        <script>document.write(new Date().getFullYear());</script>
+        <strong class="">trendydots.com</strong> <br>
         All rights reserved.</p>
 
       <ul class="text-sm text-grey-dark list-reset flex items-center">
