--- a/project.html
+++ b/project.html
@@ -93,7 +93,7 @@
         <h1 class="my-4 font-normal" style="font-weight: 700;
       font-size: 8vh; color: #757575">the story</h1>
         <p class="leading-normal mb-2 text-base md:text-lg xl:text-xl ">
-          Trendy Dots is a hobby project developing fun applications for data science, data visualization and user
+          Trendy Dots is an initiative developing fun applications for data science, data visualization and user
           experience.
           I playfully apply UX and data science best practices to big data, aiming to produce high value tools.
         </p>
