--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <h1 class="my-4 font-normal" style="font-weight: 700; margin-bottom: 2rem;
       font-size: 8vh; color: #757575">the story</h1>
         <p class="leading-normal mb-2 text-base md:text-lg xl:text-xl ">
-          Trendy Dots is an intiative developing fun applications for UX/UI, data science, data visualization and web
+          Trendy Dots is an initiative developing fun applications for UX/UI, data science, data visualization and web
           development.
           I playfully apply UX and data science best practices to big data, aiming to produce high value tools.
         </p>
