--- a/capgemini/pega/index.html
+++ b/capgemini/pega/index.html
@@ -1,1 +1,20 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no"/><meta name="theme-color" content="#000000"/><link rel="manifest" href="/manifest.json"/><link rel="icon" type="image/png" sizes="16x16" href="https://www.pega.com/themes/custom/pegawww_theme/images/favicons/favicon-16x16.png"/><title>Pega for ERSTE Group</title><link href="/static/css/main.7865597c.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><script type="text/javascript" src="/static/js/main.9d668c1a.js"></script></body></html>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no" />
+    <meta name="theme-color" content="#000000" />
+    <link rel="manifest" href="./manifest.json" />
+    <link rel="icon" type="image/png" sizes="16x16"
+        href="https://www.pega.com/themes/custom/pegawww_theme/images/favicons/favicon-16x16.png" />
+    <title>Pega for ERSTE Group</title>
+    <link href="./static/css/main.7865597c.css" rel="stylesheet">
+</head>
+
+<body><noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+    <script type="text/javascript" src="./static/js/main.9d668c1a.js"></script>
+</body>
+
+</html>
