--- a/invest/project.html
+++ b/invest/project.html
@@ -104,7 +104,7 @@
       <i>
         We offer an up-to-date broad spectrum of information. <br />
         Fast and reliable,
-        the trend research platform lets you discover with ease behavioural economics and global interest is your
+        the trend research platform lets you discover with ease behavioural economics and global interest in your
         selected
         topics.
       </i>
