--- a/invest/index.html
+++ b/invest/index.html
@@ -81,43 +81,83 @@
 
   </nav>
 
+  <!-- header statement-->
   <section style="margin-top:5em"
-    class="my-8 font-sans container max-w-xl m-auto flex flex-col lg:flex-row text-center lg:text-left sm:items-center">
-    <div class="w-full lg:w-1/2" style="box-shadow: 0 1.5em 85px 0 rgba(0,0,0,.2);">
-      <img src="./assets/img/in0.png" alt="" />
+    class="my-8 font-sans container m-auto max-w-xl flex flex-col lg:flex-row text-center lg:text-left sm:items-center">
+    <div class="w-full lg:w-1/2">
+      <img src="./assets/img/in3.png" alt="" />
     </div>
     <div class="w-full lg:w-1/2 flex flex-col justify-center items-start p-8 items-center lg:items-start">
       <h1 class="my-4 font-normal text-grey-darker">
-        Information empowers good decisions.
+        Internet behaviour research into world events, companies, markets and many more.
       </h1>
-      <p class="leading-normal mb-4 ">
-        Doing research for your new story was never this easy. When you are starting your article,
-        data trends are essential. With the trendy dots platform you will get insights into new stories and new trends
-        <br> <br>
-        We offer an intuitive, easy to use way for getting informed about the
-        things that matter.
-      </p>
+      <h2 class="my-4 font-normal">
+        Information empowers good decisions.
+        With our automated research platform you will get digests over global impact
+        and interest in the events, companies, currencies, etc. you set.
+      </h2>
+    </div>
+  </section>
+  <!-- statement 2 -->
+  <section class="my-8 font-sans container max-w-xl m-auto flex flex-col lg:flex-row text-center">
+    <h1 class="m-8 font-normal text-center">
+      <i>
+        We offer an up-to-date broad spectrum of information. <br />
+        Fast and reliable,
+        the trend research platform lets you discover with ease behavioural economics and global interest in your
+        selected
+        topics.
+      </i>
+    </h1>
+  </section>
+
+  <section
+    class="my-8 pt-8 font-sans container max-w-xl m-auto flex flex-col lg:flex-row text-center lg:text-left sm:items-center">
+    <div class="w-full lg:w-1/2 flex flex-col justify-center items-start p-8 items-center lg:items-start"
+      style="min-height:330px; background: url(./assets/img/tn1.png); background-repeat: no-repeat; background-position: center; background-size: contain;">
+      <h1 class="my-4 font-normal text-grey-darker">
+        Predicting search trends
+      </h1>
+      <h2 class="my-4 font-normal">
+        Using a simplified Holt-Winters forecasting algorithm, we predict Google Search trends with elevated accuracy.
+      </h2>
+    </div>
+    <div class="w-full lg:w-1/2">
+      <img src="./assets/img/in4.png" alt="" />
     </div>
   </section>
 
   <section
     class="my-8 pt-8 font-sans container max-w-xl m-auto flex flex-col-reverse lg:flex-row text-center lg:text-left sm:items-center">
-    <div class="w-full lg:w-1/2 flex flex-col justify-center items-start p-8 items-center lg:items-start">
+    <div class="w-full lg:w-1/2">
+      <img src="./assets/img/in5.png" alt="" />
+    </div>
+    <div class="w-full lg:w-1/2 flex flex-col justify-center items-start p-8 items-center lg:items-start"
+      style="min-height:330px; background: url(./assets/img/tn2.png); background-repeat: no-repeat; background-position: center; background-size: contain;">
       <h1 class="my-4 font-normal text-grey-darker">
-        Internet behaviur research into world events, companies, markets and many more.
+        Sentiment analysis on the internet's most popular headlines
       </h1>
-      <br />
-      <p class="leading-normal mb-4">
-        We offer up-to-date information which helps you with a broad spectrum of writing opportunities.
-        Fast and reliable,
-        the trendy dots headline plugin compiles headlines from the most read
-        media outlets in the world and categorizes them according to sentiment.
-        You will get digests over global impact
-        and interest in the events, companies, currencies, etc. you set.
-      </p>
+      <h2 class="my-4 font-normal">
+        You choose the topics, we show you world press related headlines, annotated with our sentiment analysis so you
+        easily understand the impact.
+      </h2>
+    </div>
+  </section>
+
+
+  <section
+    class="my-8 pt-8 font-sans container max-w-xl m-auto flex flex-col lg:flex-row text-center lg:text-left sm:items-center">
+    <div class="w-full h-full lg:w-1/2 flex flex-col justify-center items-start p-8 items-center lg:items-start"
+      style="min-height:330px; background: url(./assets/img/tn3.png); background-repeat: no-repeat; background-position: center; background-size: contain;">
+      <h1 class="my-4 font-normal text-grey-darker">
+        Corss regions comparisons
+      </h1>
+      <h2 class="my-4 font-normal">
+        Compare the interest in your chosen topics between countries and regions.
+      </h2>
     </div>
     <div class="w-full lg:w-1/2">
-      <img src="./assets/img/in3.png" alt="" style="box-shadow: 0 1.5em 85px 0 rgba(0,0,0,.2);" />
+      <img src="./assets/img/in6.png" alt="" />
     </div>
   </section>
 
