--- a/invest/project.html
+++ b/invest/project.html
@@ -44,7 +44,7 @@
     class="font-sans bg-white text-center flex md:justify-between items-center md:flex-row flex-col px-4 py-2 container overflow-hidden"
     style="
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-    max-width: 100%; position: fixed; top: 0; z-index: 100; 
+    max-width: 100%; position: fixed; top: 0; z-index: 100; background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(255,236,194,1) 100%);
 ">
     <span class="flex items-center">
       <a href="https://trendydots.com" class="block text-left" target="_blank">
