--- a/invest/index.html
+++ b/invest/index.html
@@ -5,6 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <meta property="og:image" content="https://trendydots.com/invest/assets/img/in3.png" />
+  <meta name="title" property="og:title" content="td. trend research platform">
+  <meta name="description" property="og:description"
+    content="Internet behaviour research into world events, companies, markets and many more.With our automated research platform you will create reports over global impact and interest in the events, companies, currencies, etc. you set.">
+  <meta property="og:type" content="behaviour trends insights platform">
+  <meta name="author" content="trendy dots">
+
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@0.7.4/dist/tailwind.min.css?v=3nov" rel="stylesheet">
   <link href=https://fonts.googleapis.com/css?family=Muli:300,400,600,700,800,900 rel="stylesheet">
   <link rel="stylesheet" href=https://use.fontawesome.com/releases/v5.0.13/css/all.css
