--- a/invest/index.html
+++ b/invest/index.html
@@ -8,7 +8,7 @@
   <meta name="title" property="og:title" content="td. trend research platform">
   <meta name="description" property="og:description"
     content="Internet behaviour research into world events, companies, markets and many more.With our automated research platform you will create reports over global impact and interest in the events, companies, currencies, etc. you set.">
-  <meta property="og:type" content="behaviour trends insights platform">
+  <meta property="og:type" content="article">
   <meta name="author" content="trendy dots">
 
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@0.7.4/dist/tailwind.min.css?v=3nov" rel="stylesheet">
