--- a/index.html
+++ b/index.html
@@ -228,26 +228,28 @@
 
   <!-- features-1 -->
   <div class="w-full" style="background: #fff; padding-bottom: 20px;">
-    <!-- Web Stitches-->
+
+    <!-- Trends -->
     <section
-      class="bg-white mb-8 font-sans container max-w-xl m-auto flex flex-col lg:flex-row text-center lg:text-left sm:items-center">
+      class="bg-white my-8 font-sans container max-w-xl m-auto flex flex-col lg:flex-row text-center lg:text-left sm:items-center">
       <div class="w-full lg:w-1/2">
-        <img class="shadow-md rounded" src="./ws.jpg" alt="" />
+        <img src="./in3.png" class="shadow-md rounded" alt="" />
       </div>
       <div class="w-full lg:w-1/2 flex flex-col justify-center items-start p-8 items-center lg:items-start">
-        <label for="tagline" class="uppercase tracking-wide text-grey-dark font-bold">web development</label>
-        <h2 class="my-4 font-normal font-bold">td<span style="color:#F2D024">.</span> web-stitches</h2>
+        <label for="tagline" class="uppercase tracking-wide text-grey-dark font-bold">behavioural economics</label>
+        <h2 class="my-4 font-normal font-bold">td<span style="color:#F2D024">.</span> trends research</h2>
         <p class="leading-normal mb-4 text-grey-darkest">
-          A web application that helps you rapidly design a landing page or an editorial website.
-          Using Google Charts, the data visualization components make it easy to express knowledge in beautiful web
-          pages.
-          It takes seconds to experiment with different layouts.
+          The td<span style="color:#F2D024">.</span> trends research platform platform that aims to offer an intuitive,
+          easy to use way for getting informed about the
+          things that matter.
+          When you are interested in human/consumer behaviour towards companies, products, world events, or innovative
+          concepts, my td<span style="color:#F2D024">.</span> trends research platform can help you with quick and easy
+          insights.
           <br><br>
           <a class="btn bg-white border cursor-pointer no-underline text-grey-darkest font-bold py-2 px-4 mb-2 rounded-full shadow-md md:shadow items-center"
-            href="/web-stitches/" target="_blank" style="white-space: nowrap; border-color: #F2D024;">
-            <span style="white-space: nowrap;"> Try for FREE </span>
+            href="/invest/" target="_blank" style="white-space: nowrap; border-color: #ff9800;">
+            <span style="white-space: nowrap;"> Check out details </span>
           </a>
-
         </p>
       </div>
     </section>
@@ -276,27 +278,26 @@
       </div>
     </section>
 
-    <!-- Trends -->
+    <!-- Web Stitches-->
     <section
-      class="bg-white my-8 font-sans container max-w-xl m-auto flex flex-col lg:flex-row text-center lg:text-left sm:items-center">
+      class="bg-white mb-8 font-sans container max-w-xl m-auto flex flex-col lg:flex-row text-center lg:text-left sm:items-center">
       <div class="w-full lg:w-1/2">
-        <img src="./in3.png" class="shadow-md rounded" alt="" />
+        <img class="shadow-md rounded" src="./ws.jpg" alt="" />
       </div>
       <div class="w-full lg:w-1/2 flex flex-col justify-center items-start p-8 items-center lg:items-start">
-        <label for="tagline" class="uppercase tracking-wide text-grey-dark font-bold">behavioural economics</label>
-        <h2 class="my-4 font-normal font-bold">td<span style="color:#F2D024">.</span> trends research</h2>
+        <label for="tagline" class="uppercase tracking-wide text-grey-dark font-bold">web development</label>
+        <h2 class="my-4 font-normal font-bold">td<span style="color:#F2D024">.</span> web-stitches</h2>
         <p class="leading-normal mb-4 text-grey-darkest">
-          The td<span style="color:#F2D024">.</span> trends research platform platform that aims to offer an intuitive,
-          easy to use way for getting informed about the
-          things that matter.
-          When you are interested in human/consumer behaviour towards companies, products, world events, or innovative
-          concepts, my td<span style="color:#F2D024">.</span> trends research platform can help you with quick and easy
-          insights.
+          A web application that helps you rapidly design a landing page or an editorial website.
+          Using Google Charts, the data visualization components make it easy to express knowledge in beautiful web
+          pages.
+          It takes seconds to experiment with different layouts.
           <br><br>
           <a class="btn bg-white border cursor-pointer no-underline text-grey-darkest font-bold py-2 px-4 mb-2 rounded-full shadow-md md:shadow items-center"
-            href="/invest/" target="_blank" style="white-space: nowrap; border-color: #F2D024;">
-            <span style="white-space: nowrap;"> Check out details </span>
+            href="/web-stitches/" target="_blank" style="white-space: nowrap; border-color: #F2D024;">
+            <span style="white-space: nowrap;"> Try for FREE </span>
           </a>
+
         </p>
       </div>
     </section>
