--- a/project.html
+++ b/project.html
@@ -53,8 +53,8 @@
 <body style="font-family: Montserrat;" class="eupopup eupopup-bottom eupopup-style-compact">
   <nav
     class="font-sans md:shadow-none md:bg-transparent bg-white shadow text-center fixed flex justify-between py-4 px-8 overflow-hidden w-full flex-col md:flex-row"
-    style="margin-bottom: 5px; z-index: 10; top:0; padding-left: 6%;
-    padding-right: 6%;">
+    style="margin-bottom: 5px; z-index: 10; top:0; padding-left: 3%;
+    padding-right: 3%;">
     <a href="/" class="block md:text-left text-center no-underline text-black"
       style="line-height:40px; font-weight: 700; font-size: 22px;">
       <span>td<span style="color:#F2D024">.</span> </span>
@@ -82,7 +82,6 @@
     </ul>
   </nav>
 
-
   <!-- the story -->
   <section
     class="bg-white font-sans w-full flex flex-col-reverse md:flex-row text-center md:text-left justify-between mt-16 pt-8 md:mt-0 md:pt-0">
@@ -90,15 +89,17 @@
       ">
       <br><br><br>
       <div>
-        <h1 class="my-4 font-normal" style="font-weight: 700;
+        <h1 class="my-4 font-normal" style="font-weight: 700; margin-bottom: 2rem;
       font-size: 8vh; color: #757575">the story</h1>
         <p class="leading-normal mb-2 text-base md:text-lg xl:text-xl ">
-          Trendy Dots is an initiative developing fun applications for data science, data visualization and user
-          experience.
+          Trendy Dots is an initiative developing fun applications for UX/UI, data science, data visualization and web
+          development.
           I playfully apply UX and data science best practices to big data, aiming to produce high value tools.
         </p>
         <p class="leading-normal mb-4 text-center ">
-          <img src="./cris.png" style="max-height: 150px; min-height: 100px;" alt="">
+          <a target="_blank" href="/me">
+            <img src="./cris.png" style="max-height: 150px; min-height: 100px;" alt="">
+          </a>
         </p>
       </div>
     </div>
@@ -176,7 +177,6 @@
 
   </section>
 
-
   <!-- support-->
   <section class="font-sans m-auto w-full" style="margin-top: 50px; background: #F5F5F5;">
     <div class="flex flex-col sm:flex-row flex-wrap items-center justify-center">
@@ -228,26 +228,28 @@
 
   <!-- features-1 -->
   <div class="w-full" style="background: #fff; padding-bottom: 20px;">
-    <!-- Web Stitches-->
+
+    <!-- Trends -->
     <section
-      class="bg-white mb-8 font-sans container max-w-xl m-auto flex flex-col lg:flex-row text-center lg:text-left sm:items-center">
+      class="bg-white my-8 font-sans container max-w-xl m-auto flex flex-col lg:flex-row text-center lg:text-left sm:items-center">
       <div class="w-full lg:w-1/2">
-        <img class="shadow-md rounded" src="./ws.jpg" alt="" />
+        <img src="./in3.png" class="shadow-md rounded" alt="" />
       </div>
       <div class="w-full lg:w-1/2 flex flex-col justify-center items-start p-8 items-center lg:items-start">
-        <label for="tagline" class="uppercase tracking-wide text-grey-dark font-bold">web development</label>
-        <h2 class="my-4 font-normal font-bold">td<span style="color:#F2D024">.</span> web-stitches</h2>
+        <label for="tagline" class="uppercase tracking-wide text-grey-dark font-bold">behavioural economics</label>
+        <h2 class="my-4 font-normal font-bold">td<span style="color:#F2D024">.</span> trends research</h2>
         <p class="leading-normal mb-4 text-grey-darkest">
-          A web application that helps you rapidly design a landing page or an editorial website.
-          Using Google Charts, the data visualization components make it easy to express knowledge in beautiful web
-          pages.
-          It takes seconds to experiment with different layouts.
+          The td<span style="color:#F2D024">.</span> trends research platform platform that aims to offer an intuitive,
+          easy to use way for getting informed about the
+          things that matter.
+          When you are interested in human/consumer behaviour towards companies, products, world events, or innovative
+          concepts, my td<span style="color:#F2D024">.</span> trends research platform can help you with quick and easy
+          insights.
           <br><br>
           <a class="btn bg-white border cursor-pointer no-underline text-grey-darkest font-bold py-2 px-4 mb-2 rounded-full shadow-md md:shadow items-center"
-            href="/web-stitches/" target="_blank" style="white-space: nowrap; border-color: #F2D024;">
-            <span style="white-space: nowrap;"> Try for FREE </span>
+            href="/invest/" target="_blank" style="white-space: nowrap; border-color: #ff9800;">
+            <span style="white-space: nowrap;"> Check out details </span>
           </a>
-
         </p>
       </div>
     </section>
@@ -276,27 +278,26 @@
       </div>
     </section>
 
-    <!-- Trends -->
+    <!-- Web Stitches-->
     <section
-      class="bg-white my-8 font-sans container max-w-xl m-auto flex flex-col lg:flex-row text-center lg:text-left sm:items-center">
+      class="bg-white mb-8 font-sans container max-w-xl m-auto flex flex-col lg:flex-row text-center lg:text-left sm:items-center">
       <div class="w-full lg:w-1/2">
-        <img src="./in3.png" class="shadow-md rounded" alt="" />
+        <img class="shadow-md rounded" src="./ws.jpg" alt="" />
       </div>
       <div class="w-full lg:w-1/2 flex flex-col justify-center items-start p-8 items-center lg:items-start">
-        <label for="tagline" class="uppercase tracking-wide text-grey-dark font-bold">behavioural economics</label>
-        <h2 class="my-4 font-normal font-bold">td<span style="color:#F2D024">.</span> trends research</h2>
+        <label for="tagline" class="uppercase tracking-wide text-grey-dark font-bold">web development</label>
+        <h2 class="my-4 font-normal font-bold">td<span style="color:#F2D024">.</span> web-stitches</h2>
         <p class="leading-normal mb-4 text-grey-darkest">
-          The td<span style="color:#F2D024">.</span> trends research platform platform that aims to offer an intuitive,
-          easy to use way for getting informed about the
-          things that matter.
-          When you are interested in human/consumer behaviour towards companies, products, world events, or innovative
-          concepts, my td<span style="color:#F2D024">.</span> trends research platform can help you with quick and easy
-          insights.
+          A web application that helps you rapidly design a landing page or an editorial website.
+          Using Google Charts, the data visualization components make it easy to express knowledge in beautiful web
+          pages.
+          It takes seconds to experiment with different layouts.
           <br><br>
           <a class="btn bg-white border cursor-pointer no-underline text-grey-darkest font-bold py-2 px-4 mb-2 rounded-full shadow-md md:shadow items-center"
-            href="/invest/" target="_blank" style="white-space: nowrap; border-color: #F2D024;">
-            <span style="white-space: nowrap;"> Check out details </span>
+            href="/web-stitches/" target="_blank" style="white-space: nowrap; border-color: #F2D024;">
+            <span style="white-space: nowrap;"> Try for FREE </span>
           </a>
+
         </p>
       </div>
     </section>
@@ -324,7 +325,9 @@
 
   <footer class="font-sans bg-white pb-8 px-4" style="z-index: 4">
     <div class="mx-auto max-w-xl overflow-hidden flex flex-col md:flex-row justify-between items-center">
-      <p class="inline-block py-2 px-3 text-center md:text-left"> ©2020 <strong class="">trendydots.com</strong> <br>
+      <p class="inline-block py-2 px-3 text-center md:text-left"> ©
+        <script>document.write(new Date().getFullYear());</script>
+        <strong class="">trendydots.com</strong> <br>
         All rights reserved.</p>
 
       <ul class="text-sm text-grey-dark list-reset flex items-center">
